Fix RGBA data VideoFrame copyTo https://bugs.webkit.org/show_bug.cgi?id=247717 rdar://102160471

Reviewed by Eric Carlson.

* Source/WebCore/platform/graphics/cv/VideoFrameCV.mm:
(WebCore::VideoFrame::copyTo):
Copy the number of bytes and not the number of pixels.

Canonical link: https://commits.webkit.org/256534@main